fix spacing

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -268,7 +268,7 @@
 
 .index-story {
   display: grid;
-  margin-top: 2rem;
+  margin-top: 7rem;
 }
 
 .index-story .about-section {
