--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -176,7 +176,7 @@
 
   &-story {
     display: grid;
-    margin-top: 2rem;
+    margin-top: 7rem;
 
     & .about-section {
       width: 70%;
